--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ node_modules
 !/build/moment-holiday-us.min.js.map
 !/build/moment-holiday.min.js
 !/build/moment-holiday.min.js.map
+!/build/moment-holiday-uk.min.js
+!/build/moment-holiday-uk.min.js.map
+package-lock.json
